2022-11-14T16:29:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463319146 # 228
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 84 235 / 88 242
* notice: next accum: outdated-unq outdated-all / unq all: 85 237 / 89 244
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-31] / [2022-11-14]

2022-11-14T08:27:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3459719047 # 227
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 84 235 / 88 243
* notice: next accum: outdated-unq outdated-all / unq all: 84 235 / 88 242
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-31]

2022-11-14T01:47:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3457897475 # 226
* notice: last 14d: unq all: 1 8
* notice: prev accum: outdated-unq outdated-all / unq all: 81 230 / 87 241
* notice: next accum: outdated-unq outdated-all / unq all: 84 235 / 88 243
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-30] / [2022-11-13]

2022-11-13T08:24:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3454481399 # 224
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 81 230 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 81 230 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +3 +5 -0 -1 / 3 4
* notice: removed / changed dates: [] / [2022-10-30]

2022-11-12T16:26:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3451673174 # 222