@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-14T16:29:02Z",
+  "timestamp" : "2022-11-15T08:26:55Z",
   "count_outdated" : 237,
   "uniques_outdated" : 85,
   "count" : 244,
-  "uniques" : 89,
+  "uniques" : 90,
   "clones" : [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
