@@ -1,3 +1,11 @@
+2022-11-15T08:26:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3468693349 # 230
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 85 237 / 89 244
+* notice: next accum: outdated-unq outdated-all / unq all: 85 237 / 90 244
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]
+
 2022-11-14T16:29:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463319146 # 228
 * notice: last 14d: unq all: 1 7
